--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(233, 223, 255);
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,6 +66,125 @@ h1 {
     height: 3px;
     width: 100%;
     position: absolute;
-    top: 101px;
+    top: 98px;
     background-color: rgb(231, 231, 231)
+}
+
+.toggle-wrapper {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.toggle-wrapper img {
+    height: 40px;
+    margin: 0 16px;
+}
+
+.toggle {
+    display: flex;
+    height: 32px;
+    width: 140px;
+    background-color: rgb(83, 49, 156);
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 12px;
+    box-sizing: border-box;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 20px;
+    padding: 0 4px 0 16px;
+}
+
+.toggle .active {
+    background-color: white;
+    color: rgb(83, 49, 156);
+    padding: 4px 16px;
+    border-radius: 24px;
+}
+
+.sessions-card {
+    background-color: rgb(250, 247, 255);
+    text-align: center;
+    padding: 32px;
+    width: 50%;
+    text-transform: uppercase;
+    margin: 16px 0;
+    border-radius: 10px;
+}
+
+.sessions-card p {
+    color: rgb(44, 44, 44);
+    font-size: 12px;
+    font-weight: bold;
+    margin: 16px 0 0 0;
+}
+
+.sessions-card .number {
+    color: rgb(83, 49, 156);
+    font-size: 52px;
+    margin: 0;
+}
+
+.description {
+    line-height: 32px;
+    margin: 10px 0 32px 0;
+}
+
+.slider {
+    width: 100%;
+    position: relative;
+}
+
+.slider .bar {
+    background-color: rgb(248, 248, 248);
+    border: 1px solid rgb(210, 210 ,210);
+    height: 16px;
+    width: 100%;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.bar .progress {
+    height: 18px;
+    width: 32%;
+    background: linear-gradient(
+        90deg,
+        rgba(2, 0, 36, 1) 0%,
+        rgba(53, 10, 74, 1) 36%,
+        rgba(83, 49, 156, 1) 100%
+    );
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.bar .point {
+    background-color: rgb(83, 49, 156);
+    height: 24px;
+    width: 24px;
+    border: 2px solid rgb(254, 254, 254);
+    border-radius: 50%;
+    position: absolute;
+    left: 30%;
+}
+
+.bar .point:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+}
+
+.slider .scale ul {
+    width: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    color: rgb(166, 166, 166);
+    font-weight: bold;
 }
