--- a/styles.css
+++ b/styles.css
@@ -270,3 +270,29 @@ h1 {
     top: -24px;
     left: 0;
 }
+
+@media only screen and (max-width: 750px){
+    h1{
+        margin: 0 0 16px 0;
+    }
+    .card {
+        width: 100%;
+    }
+    .card-wrapper {
+        flex-wrap: wrap-reverse;
+    }
+    .sessions-card {
+        width: 80%;
+    }
+}
+@media only screen and (max-width: 600px){
+    body {
+        padding: 16px;
+    }
+    .container {
+        padding: 0 16px;
+    }
+    .sessions-card {
+        width: 100%;
+    }
+}
